Remove Blink-side sticky offset for children of perspective layers.

Bug: 762962
Change-Id: I31ce57e6623f0ce3995abbb7d79dccf94022354b